deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2603
  namespace: userstarted
  labels:
    app: test2603
spec:
  replicas: 1

  # เก็บ revision history ไว้สำหรับ rollback
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: test2603

  template:
    metadata:
      labels:
        app: test2603
    spec:
      containers:
        - name: web
          # ✅ ใช้ immutable tag เท่านั้น (ห้าม latest)
          # เปลี่ยน tag = deploy เวอร์ชันใหม่
          image: quay.io/phatthananvst01/quaytest2603:v2026.04.22-029e7eb
          imagePullPolicy: Always
          ports:
            - containerPort: 80
